--- a/healthmatch/styles/globals.css
+++ b/healthmatch/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;0,800;1,100;1,800&display=swap');
+
+body
+{
+    font-family: 'Poppins', sans-serif;
+}
