--- a/healthmatch/styles/globals.css
+++ b/healthmatch/styles/globals.css
@@ -7,9 +7,12 @@
 *
 {
     font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
 }
 
+.page
+{
+  overflow: none;
+}
 
 /* Circle Spinner */
 .circle-wrap {
